--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         /* Sfondo ispirato alla Toscana */
         body {
             background-color: #0d1117; 
-            background-image: url('https://placehold.co/1280x720/0d1117/30363d?text=Colline+Toscane'); /* Placeholder immagine */
+            background-image: url('https://imgur.com/a/VXnHwrM'); /* Placeholder immagine */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -168,3 +168,4 @@
     </script>
 </body>
 </html>
+
