--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         /* Sfondo ispirato alla Toscana */
         body {
             background-color: #0d1117; 
-            background-image: url('https://imgur.com/a/VXnHwrM'); /* Placeholder immagine */
+            background-image: url('https://i.imgur.com/xDqooM3.jpeg'); /* Placeholder immagine */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -113,4 +113,5 @@
     </script>
 </body>
 </html>
+
 
