--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* Sfondo ispirato alla Toscana */
+        /* Sfondo specifico per Home (Effetto più scuro/notturno per contrasto) */
         body {
             background-color: #0d1117; 
-            background-image: url('https://i.imgur.com/xDqooM3.jpeg'); /* Placeholder immagine */
+            /* ⭐️ URL DA SOSTITUIRE ⭐️: Incolla qui il link diretto della seconda immagine (es. notturna/scura) */
+            background-image: url('https://imgur.com/Y6vueQD'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -168,5 +169,3 @@
     </script>
 </body>
 </html>
-
-
