--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         body {
             background-color: #0d1117; 
             /* ⭐️ URL DA SOSTITUIRE ⭐️: Incolla qui il link diretto della seconda immagine (es. notturna/scura) */
-            background-image: url('https://imgur.com/Y6vueQD'); 
+            background-image: url('https://i.imgur.com/Y6vueQD.jpeg'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -169,3 +169,4 @@
     </script>
 </body>
 </html>
+
