--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
         body {
             background-color: #0d1117; 
             /* ⭐️ URL DA SOSTITUIRE ⭐️: Incolla qui il link diretto Imgur (.jpg) */
-            background-image: url('https://i.imgur.com/tuaimmagineunica.jpg'); 
+            background-image: url('https://i.imgur.com/xDqooM3.jpeg'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -114,3 +114,4 @@
     </script>
 </body>
 </html>
+
